--- a/Tutorial1_Vars_and_DataTypes/index.html
+++ b/Tutorial1_Vars_and_DataTypes/index.html
@@ -9,6 +9,7 @@
 
 <body>
 </body>
-<script src="first.js"></script>
+<!-- <script src="first.js"></script> -->
+<script src="second.js"></script>
 
 </html>
