--- a/Tutorial1_Vars_and_DataTypes/index.html
+++ b/Tutorial1_Vars_and_DataTypes/index.html
@@ -10,6 +10,6 @@
 <body>
 </body>
 <!-- <script src="first.js"></script> -->
-<script src="second.js"></script>
+<script src="blocks.js"></script>
 
 </html>
