--- a/Tutorial1_Vars_and_DataTypes/index.html
+++ b/Tutorial1_Vars_and_DataTypes/index.html
@@ -11,5 +11,6 @@
 </body>
 <!-- <script src="first.js"></script> -->
 <script src="blocks.js"></script>
+<script src="typeofVars.js"></script>
 
 </html>
