--- a/Tutorial1_Vars_and_DataTypes/index.html
+++ b/Tutorial1_Vars_and_DataTypes/index.html
@@ -10,7 +10,8 @@
 <body>
 </body>
 <!-- <script src="first.js"></script> -->
-<script src="blocks.js"></script>
-<script src="typeofVars.js"></script>
+<!-- <script src="blocks.js"></script> -->
+<!-- <script src="typeofVars.js"></script> -->
+<script src="StudentObject.js"></script>
 
 </html>
