--- a/Tutorial2_operators_and_Conditional_statements/index.html
+++ b/Tutorial2_operators_and_Conditional_statements/index.html
@@ -11,6 +11,7 @@
 
 </body>
 <!-- <script src="script.js"></script> -->
-<script src="inputUsingPrompt.js"></script>
+<!-- <script src="inputUsingPrompt.js"></script> -->
+<script src="StudentGrades.js"></script>
 
 </html>
