--- a/Tutorial3_loops_and_strings/index.html
+++ b/Tutorial3_loops_and_strings/index.html
@@ -10,6 +10,7 @@
 <body>
 
 </body>
-<script src="ForLoop.js"></script>
+<!-- <script src="ForLoop.js"></script> -->
+<script src="ForInLoop.js"></script>
 
 </html>
