print even numbers

--- a/Tutorial3_loops_and_strings/index.html
+++ b/Tutorial3_loops_and_strings/index.html
@@ -11,6 +11,7 @@
 
 </body>
 <!-- <script src="ForLoop.js"></script> -->
-<script src="ForInLoop.js"></script>
+<!-- <script src="ForInLoop.js"></script> -->
+<script src="PrintEvenNumbers.js"></script>
 
 </html>
