--- a/Tutorial3_loops_and_strings/index.html
+++ b/Tutorial3_loops_and_strings/index.html
@@ -12,6 +12,7 @@
 </body>
 <!-- <script src="ForLoop.js"></script> -->
 <!-- <script src="ForInLoop.js"></script> -->
-<script src="PrintEvenNumbers.js"></script>
+<!-- <script src="PrintEvenNumbers.js"></script> -->
+<script src="Game.js"></script>
 
 </html>
