--- a/Tutorial6_DOM/index.html
+++ b/Tutorial6_DOM/index.html
@@ -12,7 +12,7 @@
     <h1>Dom DEMO by Radha Krishna Das</h1>
     <h4> Topic 6 DOM</h4>
     <button>Click Me !</button>
-    <script src="">
+    <script src="script.js">
     </script>
 </body>
 
