--- a/Tutorial6_DOM/index.html
+++ b/Tutorial6_DOM/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Dom DEMO by Radha Krishna Das</h1>
     <h4> Topic 6 DOM</h4>
-    <button>Click Me !</button>
+    <p id="result">Hey result is = </p>
     <script src="script.js">
     </script>
 </body>
