--- a/Tutorial6_DOM/index.html
+++ b/Tutorial6_DOM/index.html
@@ -11,7 +11,9 @@
 <body>
     <h1>Dom DEMO by Radha Krishna Das</h1>
     <h4> Topic 6 DOM</h4>
-    <p id="result">Hey result is = </p>
+    <p id='result'>Hey result is = </p>
+    <p id='query-selector-result'>Hey result is = </p>
+
     <script src="script.js">
     </script>
 </body>
