--- a/Tutorial6_DOM/index.html
+++ b/Tutorial6_DOM/index.html
@@ -14,6 +14,10 @@
     <p id='result'>Hey result is = </p>
     <p id='query-selector-result'>Hey result is = </p>
 
+    <div></div>
+    <div></div>
+    <div></div>
+
     <script src="script.js">
     </script>
 </body>
