inline event handling

--- a/Tutorial8_events/index.html
+++ b/Tutorial8_events/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
+    <!-- inline event handling -->
+    <button ondblclick="console.log('Double clicked')">Double click me</button>
     <div onmouseover="console.log('Mouse is hovered on div')" class="box"></div>
+    <!-- inline event handling -->
+
+
 </body>
 
 </html>
