--- a/Tutorial8_events/event handling in file/index.html
+++ b/Tutorial8_events/event handling in file/index.html
@@ -12,6 +12,7 @@
     <button id="btn1">
         Click Me!!
     </button>
+    <div id="div1" class="box"></div>
     <script src="script.js"></script>
 </body>
 
