single method for 2 selectors

--- a/Tutorial8_events/Practice light and dark mode/index.html
+++ b/Tutorial8_events/Practice light and dark mode/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    Light Mode<input type="radio" name="modes" id="light-selected">
-    Dark Mode<input type="radio" name="modes" id="dark-selected">
+    Dark Mode<input type="radio" name="modes" id="dark-selected" class="mode-selectors">
+    Light Mode<input type="radio" name="modes" id="light-selected" class="mode-selectors">
     <p>Hey welcome to modes</p>
     <script src="script.js"></script>
 </body>
