--- a/Tutorial9_Tic_Tac_Toe/index.html
+++ b/Tutorial9_Tic_Tac_Toe/index.html
@@ -20,8 +20,12 @@
             <button class="box"></button>
             <button class="box"></button>
             <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
