--- a/Tutorial9_Tic_Tac_Toe/index.html
+++ b/Tutorial9_Tic_Tac_Toe/index.html
@@ -24,6 +24,7 @@
             <button class="box"></button>
             <button class="box"></button>
         </div>
+        <button class="reset-btn">RESET</button>
     </div>
     <script src="script.js"></script>
 </body>
