--- a/Tutorial9_Tic_Tac_Toe/index.html
+++ b/Tutorial9_Tic_Tac_Toe/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <div class="container">
+        <div id="won-message">Player wons</div>
+
         <div>
             <h1 class="">Tic Tac Toe</h1>
         </div>
