--- a/Tutorial9_Tic_Tac_Toe/index.html
+++ b/Tutorial9_Tic_Tac_Toe/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <div class="container">
-        <div id="won-message">Player wons</div>
+        <div id="won-message">
+            <p>Player wons</p>
+        </div>
 
         <div>
             <h1 class="">Tic Tac Toe</h1>
