--- a/Tutorial9_Tic_Tac_Toe/index.html
+++ b/Tutorial9_Tic_Tac_Toe/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <div class="container">
-        <div id="won-message">
-            <p>Player wons</p>
+        <div id="message">
         </div>
 
         <div>
