--- a/Tutorial9_Tic_Tac_Toe/index.html
+++ b/Tutorial9_Tic_Tac_Toe/index.html
@@ -27,7 +27,9 @@
             <button class="box"></button>
             <button class="box"></button>
         </div>
-        <button class="reset-btn">RESET</button>
+        <button class="reset-btn">
+            <p>RESET</p>
+        </button>
     </div>
     <script src="script.js"></script>
 </body>
