--- a/Tutorial10_stone_paper_scissors/src/index.html
+++ b/Tutorial10_stone_paper_scissors/src/index.html
@@ -11,9 +11,15 @@
 <body>
     <div class="container">
         <div class="images-con">
-            <div class="images"><img src="../images/stone-removebg-preview.png" width="200vw" height=auto></div>
-            <div class="images"><img src="../images/paper-removebg-preview.png" width="130vw" height=auto></div>
-            <div class="images"><img src="../images/scissors-removebg-preview.png" width="200vw" height=auto></div>
+            <div class="images"><img src="../images/stone-removebg-preview.png" width="200vw" height=auto
+                    class="img-tgs" id=1>
+            </div>
+            <div class="images"><img src="../images/paper-removebg-preview.png" width="130vw" height=auto
+                    class="img-tgs" id=2>
+            </div>
+            <div class="images"><img src="../images/scissors-removebg-preview.png" width="200vw" height=auto
+                    class="img-tgs" id=3>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
