--- a/Tutorial10_stone_paper_scissors/src/index.html
+++ b/Tutorial10_stone_paper_scissors/src/index.html
@@ -12,13 +12,13 @@
     <div class="container">
         <div class="images-con">
             <div class="images"><img src="../images/stone-removebg-preview.png" width="200vw" height=auto
-                    class="img-tgs" id=1>
+                    class="img-tgs" id='stone'>
             </div>
             <div class="images"><img src="../images/paper-removebg-preview.png" width="130vw" height=auto
-                    class="img-tgs" id=2>
+                    class="img-tgs" id='paper'>
             </div>
             <div class="images"><img src="../images/scissors-removebg-preview.png" width="200vw" height=auto
-                    class="img-tgs" id=3>
+                    class="img-tgs" id='scissors'>
             </div>
         </div>
     </div>
