added score board

--- a/Tutorial10_stone_paper_scissors/src/index.html
+++ b/Tutorial10_stone_paper_scissors/src/index.html
@@ -21,6 +21,10 @@
                     class="img-tgs" id='scissors'>
             </div>
         </div>
+        <div class="score-board">
+            <div class="user-score"></div>
+            <div class="comp-score"></div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
