--- a/Tutorial10_stone_paper_scissors/src/index.html
+++ b/Tutorial10_stone_paper_scissors/src/index.html
@@ -22,8 +22,15 @@
             </div>
         </div>
         <div class="score-board">
-            <div class="user-score"></div>
-            <div class="comp-score"></div>
+            <div class="score">
+                <span id="comp-score">0</span>
+                <span>Your Score</span>
+            </div>
+            <div class="score">
+                <span id="comp-score">0</span>
+                <span>Comp Score</span>
+            </div>
+            <p>ScoreBoard</p>
         </div>
     </div>
     <script src="script.js"></script>
