--- a/Tutorial10_stone_paper_scissors/src/index.html
+++ b/Tutorial10_stone_paper_scissors/src/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="images-con">
             <div class="images"><img src="../images/stone-removebg-preview.png" width="200vw" height=auto
-                    class="img-tgs" id='stone'>
+                    class="img-tgs" id='rock'>
             </div>
             <div class="images"><img src="../images/paper-removebg-preview.png" width="130vw" height=auto
                     class="img-tgs" id='paper'>
