--- a/Tutorial10_stone_paper_scissors/src/index.html
+++ b/Tutorial10_stone_paper_scissors/src/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="score-board">
             <div class="score">
-                <span id="comp-score">0</span>
+                <span id="user-score">0</span>
                 <span>Your Score</span>
             </div>
             <div class="score">
