--- a/Tutorial10_stone_paper_scissors/src/index.html
+++ b/Tutorial10_stone_paper_scissors/src/index.html
@@ -10,6 +10,17 @@
 
 <body>
     <div class="container">
+        <div class="user-choice-con">
+            <div class="user-choice">
+                <img src="../images/stone-removebg-preview.png">
+            </div>
+        </div>
+        <div class="comp-choice-con">
+            <div class="user-choice">
+                <img src="../images/scissors-removebg-preview.png">
+            </div>
+        </div>
+
         <div class="images-con">
             <div class="images"><img src="../images/stone-removebg-preview.png" width="200vw" height=auto
                     class="img-tgs" id='rock'>
