--- a/Tutorial10_stone_paper_scissors/src/index.html
+++ b/Tutorial10_stone_paper_scissors/src/index.html
@@ -10,28 +10,6 @@
 
 <body>
     <div class="container">
-        <div class="user-choice-con">
-            <div class="user-choice">
-                <img src="../images/stone-removebg-preview.png">
-            </div>
-        </div>
-        <div class="comp-choice-con">
-            <div class="user-choice">
-                <img src="../images/scissors-removebg-preview.png">
-            </div>
-        </div>
-
-        <div class="images-con">
-            <div class="images"><img src="../images/stone-removebg-preview.png" width="200vw" height=auto
-                    class="img-tgs" id='rock'>
-            </div>
-            <div class="images"><img src="../images/paper-removebg-preview.png" width="130vw" height=auto
-                    class="img-tgs" id='paper'>
-            </div>
-            <div class="images"><img src="../images/scissors-removebg-preview.png" width="200vw" height=auto
-                    class="img-tgs" id='scissors'>
-            </div>
-        </div>
         <div class="score-board">
             <div class="score">
                 <span id="user-score">0</span>
@@ -42,6 +20,30 @@
                 <span>Comp Score</span>
             </div>
             <p>ScoreBoard</p>
+        </div>
+
+        <div class="choice">
+            <div class="user-choice-con">
+                <div class="user-choice">
+                    <img src="../images/stone-removebg-preview.png">
+                </div>
+            </div>
+            <div class="comp-choice-con">
+                <div class="user-choice">
+                    <img src="../images/scissors-removebg-preview.png">
+                </div>
+            </div>
+        </div>
+        <div class="images-con">
+            <div class="images"><img src="../images/stone-removebg-preview.png" width="200vw" height=auto
+                    class="img-tgs" id='rock'>
+            </div>
+            <div class="images"><img src="../images/paper-removebg-preview.png" width="130vw" height=auto
+                    class="img-tgs" id='paper'>
+            </div>
+            <div class="images"><img src="../images/scissors-removebg-preview.png" width="200vw" height=auto
+                    class="img-tgs" id='scissors'>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
