--- a/Tutorial10_stone_paper_scissors/src/index.html
+++ b/Tutorial10_stone_paper_scissors/src/index.html
@@ -25,12 +25,16 @@
         <div class="choice">
             <div class="user-choice-con">
                 <div class="user-choice">
-                    <img src="../images/stone-removebg-preview.png">
+                    <img src="../images/stone-removebg-preview.png" style="display: none;">
+                    <img src="../images/paper-removebg-preview.png" style="display: none;">
+                    <img src="../images/scissors-removebg-preview.png" style="display: none;">
                 </div>
             </div>
             <div class="comp-choice-con">
                 <div class="user-choice">
-                    <img src="../images/scissors-removebg-preview.png">
+                    <img src="../images/stone-removebg-preview.png" style="display: none;">
+                    <img src="../images/paper-removebg-preview.png" style="display: none;">
+                    <img src="../images/scissors-removebg-preview.png" style="display: none;">
                 </div>
             </div>
         </div>
