--- a/Tutorial10_stone_paper_scissors/src/index.html
+++ b/Tutorial10_stone_paper_scissors/src/index.html
@@ -25,16 +25,16 @@
         <div class="choice">
             <div class="user-choice-con">
                 <div class="user-choice">
-                    <img src="../images/stone-removebg-preview.png" style="display: none;">
-                    <img src="../images/paper-removebg-preview.png" style="display: none;">
-                    <img src="../images/scissors-removebg-preview.png" style="display: none;">
+                    <img src="../images/stone-removebg-preview.png" style="display: none;" id="user-choice-stone">
+                    <img src="../images/paper-removebg-preview.png" style="display: none;" id="user-choice-paper">
+                    <img src="../images/scissors-removebg-preview.png" style="display: none;" id="user-choice-scissors">
                 </div>
             </div>
             <div class="comp-choice-con">
                 <div class="user-choice">
-                    <img src="../images/stone-removebg-preview.png" style="display: none;">
-                    <img src="../images/paper-removebg-preview.png" style="display: none;">
-                    <img src="../images/scissors-removebg-preview.png" style="display: none;">
+                    <img src="../images/stone-removebg-preview.png" style="display: none;" id="comp-choice-stone">
+                    <img src="../images/paper-removebg-preview.png" style="display: none;" id="comp-choice-paper">
+                    <img src="../images/scissors-removebg-preview.png" style="display: none;" id="comp-choice-scissors">
                 </div>
             </div>
         </div>
