--- a/Tutorial10_stone_paper_scissors/src/index.html
+++ b/Tutorial10_stone_paper_scissors/src/index.html
@@ -25,16 +25,16 @@
         <div class="choice">
             <div class="user-choice-con">
                 <div class="user-choice">
-                    <img src="../images/stone-removebg-preview.png" id="user-choice-stone">
-                    <img src="../images/paper-removebg-preview.png" id="user-choice-paper">
-                    <img src="../images/scissors-removebg-preview.png" id="user-choice-scissors">
+                    <img src="../images/stone-removebg-preview.png" id="user-choice-stone" class="user-choices">
+                    <img src="../images/paper-removebg-preview.png" id="user-choice-paper" class="user-choices">
+                    <img src="../images/scissors-removebg-preview.png" id="user-choice-scissors" class="user-choices">
                 </div>
             </div>
             <div class="comp-choice-con">
                 <div class="user-choice">
-                    <img src="../images/stone-removebg-preview.png" id="comp-choice-stone">
-                    <img src="../images/paper-removebg-preview.png" id="comp-choice-paper">
-                    <img src="../images/scissors-removebg-preview.png" id="comp-choice-scissors">
+                    <img src="../images/stone-removebg-preview.png" id="comp-choice-stone" class="comp-choices">
+                    <img src="../images/paper-removebg-preview.png" id="comp-choice-paper" class="comp-choices">
+                    <img src="../images/scissors-removebg-preview.png" id="comp-choice-scissors" class="comp-choices">
                 </div>
             </div>
         </div>
