--- a/Tutorial10_stone_paper_scissors/src/index.html
+++ b/Tutorial10_stone_paper_scissors/src/index.html
@@ -29,6 +29,7 @@
                     <img src="../images/paper-removebg-preview.png" id="user-choice-paper" class="user-choices">
                     <img src="../images/scissors-removebg-preview.png" id="user-choice-scissors" class="user-choices">
                 </div>
+                <p>Your choice</p>
             </div>
             <div class="comp-choice-con">
                 <div class="user-choice">
