both designs corrected

--- a/Tutorial10_stone_paper_scissors/src/index.html
+++ b/Tutorial10_stone_paper_scissors/src/index.html
@@ -32,11 +32,12 @@
                 <p>Your choice</p>
             </div>
             <div class="comp-choice-con">
-                <div class="user-choice">
+                <div class="comp-choice">
                     <img src="../images/stone-removebg-preview.png" id="comp-choice-stone" class="comp-choices">
                     <img src="../images/paper-removebg-preview.png" id="comp-choice-paper" class="comp-choices">
                     <img src="../images/scissors-removebg-preview.png" id="comp-choice-scissors" class="comp-choices">
                 </div>
+                <p>Comp choice</p>
             </div>
         </div>
         <div class="images-con">
