--- a/Tutorial10_stone_paper_scissors/src/index.html
+++ b/Tutorial10_stone_paper_scissors/src/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="container">
+        <audio src="../audio/mixkit-arcade-game-complete-or-approved-mission-205.wav" id="play-audio"></audio>
         <div class="score-board">
             <div class="score">
                 <span id="user-score">0</span>
