--- a/Tutorial12_callbacks_promises_async_await/5. async and await/IIFE/index.html
+++ b/Tutorial12_callbacks_promises_async_await/5. async and await/IIFE/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Async and Await</title>
+    <title>IIFE</title>
 </head>
 
 <body>
