--- a/Tutorial13_Fetch_Apis/index.html
+++ b/Tutorial13_Fetch_Apis/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <div class="container">
-        <button>Get Facts</button>
+        <p id="cat-para"></p>
+        <button id="get-facts">Get Facts</button>
     </div>
     <script src="script.js"></script>
 </body>
