--- a/Tutorial13_Fetch_Apis/index.html
+++ b/Tutorial13_Fetch_Apis/index.html
@@ -10,8 +10,9 @@
 
 <body>
     <div class="container">
-        <p id="cat-para"></p>
-        <button id="get-facts">Get Facts</button>
+        <div>About Cats</div>
+        <div id="cat-para"></div>
+        <div><button id="get-facts">Get Facts</button></div>
     </div>
     <script src="script.js"></script>
 </body>
