fix: add comment to clarify script loading order in index.html

--- a/Tutorial2_operators_and_Conditional_statements/index.html
+++ b/Tutorial2_operators_and_Conditional_statements/index.html
@@ -12,6 +12,8 @@
 </body>
 <!-- <script src="script.js"></script> -->
 <!-- <script src="inputUsingPrompt.js"></script> -->
+
+<!--This is kept at end of the body so script execution will happen after body is loaded -->
 <script src="StudentGrades.js"></script>
 
 </html>
