feat: add changetext.js and index.html for dynamic text change on button click

--- a/Tutorial1_Vars_and_DataTypes/index.html
+++ b/Tutorial1_Vars_and_DataTypes/index.html
@@ -9,9 +9,9 @@
 
 <body>
 </body>
-<!-- <script src="first.js"></script> -->
-<!-- <script src="blocks.js"></script> -->
-<!-- <script src="typeofVars.js"></script> -->
+<!-- <script src="first.js"></script>
+<script src="blocks.js"></script>
+<script src="typeofVars.js"></script> -->
 <script src="StudentObject.js"></script>
 
 </html>
