--- a/Tutorial3_loops_and_strings/Loops/index.html
+++ b/Tutorial3_loops_and_strings/Loops/index.html
@@ -11,8 +11,8 @@
 
 </body>
 <!-- <script src="ForLoop.js"></script> -->
-<!-- <script src="ForInLoop.js"></script> -->
+<script src="ForInLoop.js"></script>
 <!-- <script src="PrintEvenNumbers.js"></script> -->
-<script src="Game.js"></script>
+<!-- <script src="Game.js"></script> -->
 
 </html>
