feat: add id to calculator div and store reference in script

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="calculator">
+  <div class="calculator" id="calculator">
     <div class="calculator_inputs">
       <input type="text" placeholder="num1" id="num1">
       <input type="text" placeholder="num2" id="num2">
